--- a/src/style/index.less
+++ b/src/style/index.less
@@ -371,3 +371,33 @@
         }
     }   
 }
+
+.driver-detail {
+    
+    .driver-profile {
+        height: 300px;
+    }
+
+    .driver-summary {
+        height: 300px;
+        
+        .ant-card-head {
+            padding: 0px 16px;
+        }
+    }
+
+    .driver-summary-chart {
+        height: 220px !important;
+    }
+
+    .driver-detail-race-detail {
+        &-table{
+            margin-top: 8px;
+
+            .flag-icon {
+                height: 15px;
+                vertical-align: middle;
+            }       
+        }
+    }
+}
