--- a/src/style/index.less
+++ b/src/style/index.less
@@ -347,6 +347,15 @@
 }
 
 .driver-detail {
+
+    
+    .driver-detail-statistic-table{
+        thead > tr > th {
+            background-color: @main-color !important;
+            color: #f3f1f1;
+            text-align: center;
+        }    
+    }
     
     .driver-profile {
         height: 300px;
