--- a/src/style/index.less
+++ b/src/style/index.less
@@ -359,6 +359,10 @@
     
     .driver-profile {
         height: 300px;
+
+        .flag-icon {
+            width: 20px;
+        }
     }
 
     .driver-summary {
