--- a/src/style/index.less
+++ b/src/style/index.less
@@ -176,14 +176,18 @@
 
 .race-result-container{
     width: @right-side-card-width;
-    height: 300px;
 
     .ant-card-body {
         padding: @card-padding;
     }
 
-    .card-title {
-        font-weight: 500;
+    .ant-card-head {
+        padding: 0 @card-padding;
+
+        .ant-card-head-title {
+            padding-bottom: 2px;
+            padding-top: @card-padding;
+        }
     }
 
     .podium-container {
