--- a/src/style/index.less
+++ b/src/style/index.less
@@ -383,13 +383,24 @@
 
     .driver-detail-race-detail {
         &-table{
-            margin-top: 8px;
-            max-width: 400px;
-
             .flag-icon {
                 height: 15px;
                 vertical-align: middle;
             }       
+
+            .logo-icon {
+                font-size: 27px;
+            }
+
+            .ant-card-head {
+                padding-left: 16px;
+                padding-top: 8px;
+                min-height: 0px;
+                
+                .ant-card-head-title {
+                    padding: 0px
+                }
+            }
         }
     }
 }
